Update to 0.8.0 final

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 name = My Udash Application
 package = io.company.app
-scala_version = 2.12.8
-udash_version = 0.8.0-RC8
+scala_version = 2.12.9
+udash_version = 0.8.0
 sbt_version = 1.2.8
