--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
 jobs:
   include:
     - if: branch = master
-      env: test $TRAVIS_PULL_REQUEST = "false" && sbt new UdashFramework/udash.g8
+      script: test $TRAVIS_PULL_REQUEST = "false" && sbt new UdashFramework/udash.g8
