--- a/project/build.properties
+++ b/project/build.properties
@@ -1,2 +1,3 @@
-# suppress inspection "UnusedProperty"
-sbt.version = 1.3.2
+# suppress inspection "UnusedProperty" for whole file
+sbt.version = 1.3.6
+giter8.version=0.12.0
