--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 name = My Udash Application
 package = io.company.app
-scala_version = 2.12.10
-udash_version = 0.8.1
-sbt_version = 1.3.6
+scala_version = 2.13.4
+udash_version = 0.9.0-M11
+sbt_version = 1.5.3
