--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,6 @@
 name = My Udash Application
 package = io.company.app
-scala_version = 2.13.4
-udash_version = 0.9.0-M11
-sbt_version = 1.5.4
+scala_version = 2.13.7
+udash_version = 0.9.0-M28
+sbt_version = 1.6.1
+macrotask_executor = no
